Sylvain Watelet - 07/08/2014 - Modifications in 0,9 and 10. Documentation of divabin.

--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -334,7 +334,7 @@ urlcolor=blue}
 
 
 \title{\diva User Guide}
-\author{C.~Troupin, M.~Ouberdous, D.~Sirjacobs, A.~Alvera-Azc\'{a}rate,\\ A.~Barth, M.-E. Toussaint \& J.-M.~Beckers}
+\author{C.~Troupin, M.~Ouberdous, D.~Sirjacobs, A.~Alvera-Azc\'{a}rate,\\ A.~Barth, M.-E. Toussaint, S.~Watelet \& J.-M.~Beckers}
 \date{}
 
 \makeindex
