--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -49,6 +49,7 @@ Simply type:
 \subsection{Operations on data}
 
 \begin{description}
+\item[\command{divabin}:] bins the data in order to improve the quality of the optimized parameters (CL and SNR).
 \item[\command{divaanom}:] computes the difference between the data and the provided reference field. 
 \item[\command{divadataclean}:] eliminates all data that fall outside the bounding box of the contours.
 \item[\command{divadatacoverage}:] Writes Relative Length (RL) (\file{RL.dat} and \file{RLInfo.dat}) field based on data coverage and data density field (\file{DATABINS.dat}).
